Fix responsiveness on small mobile
There are still some leftover issues, like some dialogs overflowing the
screen. These will be addressed later, as based on a user survey, small
mobile screens aren't a priority.

--- a/distributable/css/view-responsive.css
+++ b/distributable/css/view-responsive.css
@@ -43,28 +43,28 @@
 
     #app-title
     {
-        left: 2.5%;
-        top: 0px;
+        left: 3%;
+        top: -4px;
     }
 
     .ObservationList > .ObservationListFootnotes
     {
-        left: 2.5%;
-        top: -140px;
+        left: 3%;
+        top: 75px;
     }
 
     .ObservationList > .ObservationListMenuBar
     {
-        width: 95vw;
-        left: 50%;
-        transform: translateX(-50%);
-        top: -90px;
+        width: 83vw;
+        left: 3%;
+        top: 118px;
     }
 
     .ObservationList > .ObservationListMenuBar.sticky
     {
         right: 0;
-        width: 99vw;
+        width: 93vw;
+        left: 15px;
     }
 
     .BirdSearchResultsDisplay
@@ -84,12 +84,99 @@
     .Dialog.QueryObservationDate,
     .Dialog.QueryObservationDeletion
     {
-        max-width: 90vw;
-        min-width: 90vw;
+        max-width: 93vw;
+        min-width: 93vw;
     }
 
-    .BirdSearchResult
+    .ObservationList > .ObservationListMenuBar .MenuButton.list-language
     {
-        width: 85vw;
+        display: none;
+    }
+
+    .ObservationList > .ObservationListMenuBar.sticky
+    {
+        left: 10px;
+    }
+
+    .ObservationList > .ObservationListMenuBar .buttons
+    {
+        flex-basis: 125px;
+    }
+
+    .ObservationList > .ObservationListMenuBar .buttons
+    {
+        flex-basis: 130px;
+    }
+
+    .BirdSearchResultsDisplay
+    {
+        left: 0;
+        top: 49px;
+        width: 95vw;
+    }
+
+    .CheckBoxButton .tooltip,
+    .MenuButton .tooltip
+    {
+        display: none;
+    }
+
+    .ObservationList > .ObservationListMenuBar
+    {
+        width: 95vw;
+    }
+}
+
+@media only screen and (max-width: 450px)
+{
+    .ObservationCard .BirdThumbnail
+    {
+        width: 190px;
+        height: 190px;
+    }
+
+    .ObservationList > .ObservationListMenuBar .buttons
+    {
+        flex-basis: 120px;
+        margin-left: 10px;
+    }
+}
+
+@media only screen and (max-width: 410px)
+{
+    .ObservationList > .ObservationListFootnotes
+    {
+        left: 5%;
+    }
+
+    #app-title
+    {
+        left: 5%;
+    }
+
+    .BirdSearchResult .BirdThumbnail
+    {
+        margin-right: 15px;
+    }
+
+    .ObservationList > .ObservationListMenuBar.non-sticky
+    {
+        display: none;
+    }
+
+    #content > #header
+    {
+        padding-bottom: 155px;
+    }
+
+    .ObservationList > .ObservationListMenuBar.sticky
+    {
+        left: 10px;
+    }
+
+    .ObservationList > .ObservationListMenuBar .buttons
+    {
+        flex-basis: 120px;
+        margin-left: 15px;
     }
 }
